--- a/css/style.css
+++ b/css/style.css
@@ -1623,7 +1623,7 @@ a:focus {
   text-decoration: none;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 30px 30px; /* Adjust icon size */
+  background-size: contain; /* Adjust icon size */
   transition: background-color 0.3s, transform 0.3s;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
 }
